--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# ---------------------------------------------------------------------------------------------------------------------
+# Ignore Project files
+# ---------------------------------------------------------------------------------------------------------------------
+
+.sass-cache
+
+# ---------------------------------------------------------------------------------------------------------------------
+# Ignore Ruby files
+# ---------------------------------------------------------------------------------------------------------------------
+
 *.gem
 *.rbc
 /.config
@@ -40,11 +50,88 @@ build-iPhoneSimulator/
 /vendor/bundle
 /lib/bundler/man/
 
-# for a library or gem, you might want to ignore these files since the code is
-# intended to run in multiple environments; otherwise, check them in:
-# Gemfile.lock
-# .ruby-version
-# .ruby-gemset
+# Gemfile:
+Gemfile.lock
+.rbenv-version
+.ruby-version
+.ruby-gemset
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# ---------------------------------------------------------------------------------------------------------------------
+# Ignore OSX files
+# ---------------------------------------------------------------------------------------------------------------------
+
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# ---------------------------------------------------------------------------------------------------------------------
+# Ignore Linux files
+# ---------------------------------------------------------------------------------------------------------------------
+
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
+
+# ---------------------------------------------------------------------------------------------------------------------
+# Ignore Windows files
+# ---------------------------------------------------------------------------------------------------------------------
+
+# Windows thumbnail cache files
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
